--- a/themes/osprey/static/styles/scss/main.scss
+++ b/themes/osprey/static/styles/scss/main.scss
@@ -314,9 +314,6 @@ h1, h2, h3 {
     width: 100%;
     margin: 0;
   }
-  h4 {
-
-  }
 }
 #authors {
   background-color: $red;
@@ -339,28 +336,36 @@ h1, h2, h3 {
 #foxes {
   .slider-container {
     position: relative;
+        background-color: $smoke;
+        padding: 0;
 
-  .siema {
-    margin: 2em;
-  }
-  button {
-    background-color: transparent;
-    position: absolute;
-    top: 50%;
-    width: 30px;
-    outline: none;
-    cursor: pointer;
+    .siema {
+      margin: 1em 0;
+      .inner-container{
+        padding: 2em 3em 0;
 
-    &.prev {
-      left: 0;
+      }
     }
 
-    &.next {
-      right: 0;
-    }
 
+    button {
+      background-color: transparent;
+      position: absolute;
+      top: 40%;
+      width: 1em;
+      outline: none;
+      cursor: pointer;
+
+      &.prev {
+        left: 1em;
+      }
+
+      &.next {
+        right: 1em;
+      }
+
+    }
   }
-}
 }
 
 #instafeed {
@@ -384,6 +389,14 @@ h1, h2, h3 {
     img {
       display: block;
       width: 100%;
+      transition: transform 0.3s ease-in-out;
+      transform: scale(0.8);
+    }
+    &:hover img{
+      transform: scale(1);
+    }
+    &hover img::after{
+      box-shadow: black 5px 5px 5px 5px;
     }
   }
 }
