--- a/themes/osprey/layouts/partials/footer.html
+++ b/themes/osprey/layouts/partials/footer.html
@@ -19,7 +19,7 @@
   {{ if or (.Site.Params.copyright) (.Site.Params.credit) }}
     <div class="col-xs-12">
       {{ if .Site.Params.copyright }}
-        Copyright &copy; {{ now.Format "2006" }} {{ .Site.Title }}. <a href="http://www.bispublishers.com/">BIS Publishers</a>
+        Copyright &copy; {{ now.Format "2006" }} {{ .Site.Title }}. <a href="https://www.wiley.com/en-au">Wiley</a>.
       {{ end }}
     </div>
   {{ end }}
