--- a/themes/osprey/layouts/partials/authors.html
+++ b/themes/osprey/layouts/partials/authors.html
@@ -2,13 +2,13 @@
 {{ $filename := "authors.md" }}
 {{ if (where (readDir $directory) "Name" $filename) }}
   <section class="authors" id="authors">
-    <div class="container middle-xs">
+    <div class="wide-container middle-xs">
       <div class="row center-xs">
         <div class="col-xs-12">
           <h1>{{ with $.Site.GetPage "page" "authors.md" }}{{ .Title }}{{ end }}</h1>
         </div>
       </div>
-      <div class="row">
+      <div class="row center-xs">
         <div class="col-xs-12 middle-xs author-bio">
           {{ with $.Site.GetPage "page" "authors.md" }}
             {{ .Content }}
