--- a/themes/osprey/layouts/partials/body-top.html
+++ b/themes/osprey/layouts/partials/body-top.html
@@ -19,8 +19,10 @@
           <strong>{{ .Site.Params.tagline }}</strong>
         </div>
         <row>
-                  <br>
-          <a href="#" class="button">Buy the book</a>
+          <br>
+          <p><em>{{ .Site.Params.queryline }}</em></p>
+
+          <a href="#" class="button">buy the book</a>
         </row>
       </div>
     </div>
@@ -28,17 +30,21 @@
 {{ end }}
 
 <nav class="row middle-xs center-xs">
-  <div class="col-xs-6 col-sm-1 logo">
+  <div class="col-xs-4 col-sm-1 logo">
     <a href="{{ .Site.BaseURL }}#">
       <img src="{{ .Site.Params.logoSmall }}" alt="{{ .Site.Title }}">
     </a>
   </div>
     {{ range .Site.Menus.main }}
-      <div class="col-xs-3 col-sm-2">
+      <div class="col-xs-2 col-sm-2">
         <h3><a data-scroll href="{{ .URL }}">{{ .Name }}</a></h3>
       </div>
     {{ end }}
-  <div class="col-xs-6 col-sm-1 nav-toggle">
+    <div class="col-xs-2 col-sm-2 buy-button">
+      <a href="#" class="button">buy the book</a>
+    </div>
+
+  <div class="col-xs-4 col-sm-1 nav-toggle">
       <a href="" class="nav-icon" onclick="return false"><img src="/images/icon-menu.png" alt="Open Menu"><img src="/images/icon-x.png" alt="Close Menu" style="display: none;"></a>
   </div>
 </nav>
@@ -49,6 +55,7 @@
       {{ range .Site.Menus.main }}
         <div class="col-xs-12"><h1><a data-scroll href="{{ .URL }}">{{ .Name }}</a></h1></div>
       {{ end }}
+      <div class="col-xs-12"><h1><a href="#" class="button">buy the book</a></h1></div>
     </div>
   </div>
 </section>
