--- a/themes/osprey/static/styles/main.css
+++ b/themes/osprey/static/styles/main.css
@@ -1042,9 +1042,10 @@ header {
     color: #FFFFFF;
     font-size: 8rem;
     line-height: 6rem;
-    letter-spacing: 5px;
+    letter-spacing: 0px;
     margin: 0; }
   header strong {
+    color: #FFFFFF;
     position: relative; }
   header strong::before {
     content: "";
@@ -1052,14 +1053,20 @@ header {
     bottom: -10px;
     height: 1px;
     width: 100%;
-    border-bottom: 4px solid #212121; }
+    border-bottom: 4px solid #FFFFFF; }
+  header p em, header p q {
+    color: #FFFFFF; }
   header .button {
     display: inline-block;
     width: 200px;
     padding: 8px;
-    color: #fff;
-    border: 1px solid #fff;
-    text-align: center; }
+    background-color: #b3b2b2;
+    color: #FFFFFF;
+    border-radius: 25px;
+    text-align: center;
+    transition: color 0.3s ease-in-out; }
+    header .button:hover {
+      color: #D41016; }
 
 nav {
   height: 4rem;
@@ -1072,8 +1079,7 @@ nav {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4); }
   nav h3 {
     margin: 0;
-    font-family: "Hel┬¡vetica", Arial, sans-serif;
-    text-transform: uppercase;
+    font-family: #b3b2b2;
     letter-spacing: 2px;
     font-weight: 600; }
   nav img {
@@ -1081,9 +1087,29 @@ nav {
     max-width: 10em;
     max-height: 2.5em;
     vertical-align: middle; }
-  nav div.logo, nav div.nav-toggle {
+  nav div.logo, nav div.nav-toggle, nav div.buy-button {
     visibility: hidden;
     max-width: none; }
+  nav .logo {
+    position: absolute;
+    left: 2em; }
+  nav .nav-toggle {
+    position: absolute;
+    right: 6em; }
+  nav .buy-button {
+    position: absolute;
+    right: 2em; }
+    nav .buy-button .button {
+      display: inline-block;
+      width: 100%;
+      padding: 8px 1em;
+      background-color: #b3b2b2;
+      color: #FFFFFF;
+      border-radius: 25px;
+      text-align: center;
+      transition: color 0.3s ease-in-out; }
+      nav .buy-button .button:hover {
+        color: #D41016; }
   nav .nav-toggle a {
     display: none; }
 
@@ -1136,9 +1162,15 @@ p {
 h1, h2, h3 {
   font-family: "Hel┬¡vetica", Arial, sans-serif;
   margin-top: 2rem;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+  font-weight: bold; }
   h1 a, h2 a, h3 a {
     text-decoration: none; }
+
+main h1 {
+  text-align: left;
+  color: #D41016;
+  font-weight: bold; }
 
 .posts-list {
   margin: 0 0 2rem; }
@@ -1188,6 +1220,8 @@ h1, h2, h3 {
   padding-bottom: 4rem; }
   .about p {
     margin-top: 2rem; }
+  .about h2 strong {
+    color: #D41016; }
   .about a {
     text-shadow: 0.03em 0 #fff, -0.03em 0 #fff, 0 0.03em #fff, 0 -0.03em #fff, 0.06em 0 #fff, -0.06em 0 #fff, 0.09em 0 #fff, -0.09em 0 #fff, 0.12em 0 #fff, -0.12em 0 #fff, 0.15em 0 #fff, -0.15em 0 #fff, 0.03em 0.075em #fff, -0.03em 0.075em #fff, 0.06em 0.075em #fff, -0.06em 0.075em #fff, 0.09em 0.075em #fff, -0.09em 0.075em #fff, 0.12em 0.075em #fff, -0.12em 0.075em #fff, 0.15em 0.075em #fff, -0.15em 0.075em #fff;
     background-image: linear-gradient(#D41016, #D41016);
@@ -1201,7 +1235,7 @@ h1, h2, h3 {
     max-width: 80%; }
 
 .gallery {
-  padding: 4rem 0 4rem;
+  padding: 0 0 4rem;
   margin: auto; }
   .gallery div[class^="col-"], .gallery div[class*=" col-"] {
     padding: 0;
@@ -1210,6 +1244,8 @@ h1, h2, h3 {
       opacity: 1; }
     .gallery div[class^="col-"]:hover .title h2, .gallery div[class*=" col-"]:hover .title h2 {
       color: #FFFFFF; }
+  .gallery .gallery-container {
+    margin: 0 2em; }
 
 .title {
   position: absolute;
@@ -1220,14 +1256,18 @@ h1, h2, h3 {
   height: 100%;
   width: 100%; }
   .title h2 {
-    color: "Hel┬¡vetica", Arial, sans-serif;
+    color: #b3b2b2;
     position: absolute;
     bottom: 2rem;
+    left: 2rem;
+    text-align: left;
     transition: 0.3s ease-in-out; }
   .title h4 {
-    color: #D41016;
+    color: #b3b2b2;
     position: absolute;
-    bottom: 5rem; }
+    bottom: 5rem;
+    left: 2rem;
+    text-align: left; }
 
 .overlay {
   position: absolute;
@@ -1242,7 +1282,7 @@ h1, h2, h3 {
   transition: .3s ease-in-out; }
   .overlay .chapters {
     display: block;
-    padding: 5em 1em; }
+    padding: 3em 1em; }
   .overlay h3, .overlay h4 {
     color: #FFFFFF;
     display: block;
