--- a/themes/osprey/layouts/partials/body-top.html
+++ b/themes/osprey/layouts/partials/body-top.html
@@ -7,23 +7,26 @@
 
 {{ if .IsHome }}
   <header class="row middle-xs center-xs">
-    <div class="col-xs-12">
-      <div class="row middle-xs center-xs">
-        <div class="col-xs-12">
+    <div class="col-xs-10">
+      <div class="row middle-xs start-xs">
+        <div class="col-xs-6">
           <h1>affected</h1>
+          <strong>{{ .Site.Params.tagline }}</strong>
+          <br><br>
           <!-- <img src="{{ .Site.Params.logoBig}}" alt="{{ .Site.Title }}"> -->
+          <a href="https://www.wiley.com/en-ar/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
+          <a href="https://affected.eventbrite.com.au" class="button">RSVP to the launch</a>
         </div>
       </div>
-      <div class="row middle-xs center-xs">
-        <div class="col-xs-12">
-          <strong>{{ .Site.Params.tagline }}</strong>
-        </div>
-        <row>
-          <br>
-          <p><em>{{ .Site.Params.queryline }}</em></p>
+      <div class="row middle-xs end-xs">
+        <div class="col-xs-8">
 
-          <a href="#" class="button">buy the book</a>
-        </row>
+
+          <p><em>{{ .Site.Params.queryline }}</em></p>
+          <img class="signature-img" src="/images/sig.png"/>
+
+
+        </div>
       </div>
     </div>
   </header>
@@ -41,7 +44,7 @@
       </div>
     {{ end }}
     <div class="col-xs-2 col-sm-2 buy-button">
-      <a href="#" class="button">buy the book</a>
+      <a href="https://www.wiley.com/en-ar/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
     </div>
 
   <div class="col-xs-4 col-sm-1 nav-toggle">
@@ -55,7 +58,7 @@
       {{ range .Site.Menus.main }}
         <div class="col-xs-12"><h1><a data-scroll href="{{ .URL }}">{{ .Name }}</a></h1></div>
       {{ end }}
-      <div class="col-xs-12"><h1><a href="#" class="button">buy the book</a></h1></div>
+      <div class="col-xs-12"><h1><a href="https://www.wiley.com/en-ar/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a></h1></div>
     </div>
   </div>
 </section>
