--- a/themes/osprey/layouts/partials/foxes.html
+++ b/themes/osprey/layouts/partials/foxes.html
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 center-xs">
-          <h2><a href="">affected instagram</a></h2>
+          <h2><a href="https://www.instagram.com/affected_thebook/">affected instagram</a></h2>
           <div id="instafeed">
           </div>
 
