--- a/themes/osprey/layouts/partials/header.html
+++ b/themes/osprey/layouts/partials/header.html
@@ -75,7 +75,8 @@
   {{ if .RSSLink }}
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">
   {{ end }}
-
+  
+ <link href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css' rel='stylesheet'/>
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/styles/{{ if .Site.Params.cacheBustCSS }}{{ index .Site.Data.cachedAssets "main.css" }}{{ else }}main.css{{ end }}" type="text/css">
 
   {{ if .Site.Params.customCSS }}
