--- a/themes/osprey/layouts/partials/body-top.html
+++ b/themes/osprey/layouts/partials/body-top.html
@@ -14,7 +14,7 @@
           <strong>{{ .Site.Params.tagline }}</strong>
           <br><br>
           <!-- <img src="{{ .Site.Params.logoBig}}" alt="{{ .Site.Title }}"> -->
-          <a href="https://www.wiley.com/en-ar/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
+          <a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
           <a href="https://affected.eventbrite.com.au" class="button">RSVP to the launch</a>
         </div>
       </div>
@@ -44,7 +44,7 @@
       </div>
     {{ end }}
     <div class="col-xs-2 col-sm-2 buy-button">
-      <a href="https://www.wiley.com/en-ar/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
+      <a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
     </div>
 
   <div class="col-xs-4 col-sm-1 nav-toggle">
@@ -58,7 +58,7 @@
       {{ range .Site.Menus.main }}
         <div class="col-xs-12"><h1><a data-scroll href="{{ .URL }}">{{ .Name }}</a></h1></div>
       {{ end }}
-      <div class="col-xs-12"><h1><a href="https://www.wiley.com/en-ar/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a></h1></div>
+      <div class="col-xs-12"><h1><a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a></h1></div>
     </div>
   </div>
 </section>
