--- a/themes/osprey/layouts/partials/body-bottom.html
+++ b/themes/osprey/layouts/partials/body-bottom.html
@@ -6,8 +6,8 @@
 <script>
 	var scroll = new SmoothScroll('a[href*="#"]');
 	const mySiema = new Siema({
-		duration: 500,
-		loop: true,
+		duration: 200,
+		loop: true
 	});
 
 
