--- a/themes/osprey/layouts/partials/about.html
+++ b/themes/osprey/layouts/partials/about.html
@@ -6,22 +6,19 @@
       <h4>Check us out</h4>
       <div class="row">
         <a href="https://www.instagram.com/affected_thebook/" class="icon-link round instagram"><i class="fa fa-instagram"></i></a>
-        <a href="https://twitter.com/drcarawrigley?lang=en" class="icon-link round linkedin"><i class="fa fa-linkedin"></i></a>
-        <a href="https://www.linkedin.com/in/karla-straker-a7051a42/" class="icon-link round twitter"><i class="fa fa-twitter"></i></a>
-      </div>
-      <div class="row center-xs">
-        <div class="col-xs-12">
-          <h1>{{ with $.Site.GetPage "page" "about.md" }}{{ .Title }}{{ end }}</h1>
-        </div>
+        <a href="https://www.linkedin.com/in/karla-straker-a7051a42/" class="icon-link round linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/carawrigley/" class="icon-link round linkedin"><i class="fa fa-linkedin"></i></a>
+
+        <a href="https://twitter.com/drcarawrigley?lang=en" class="icon-link round twitter"><i class="fa fa-twitter"></i></a>
       </div>
       {{ with $.Site.GetPage "page" "about.md" }}
       <div class="row">
-        <div class="col-xs-12 col-md-8">
+        <div class="col-xs-12 col-md-6">
 
             {{ .Content }}
 
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-6">
           <img src="/images/{{ .Params.image}}" {{ if .Params.alt }}alt="{{ .Params.alt }}"{{ end }}>
         </div>
       </div>
