--- a/themes/osprey/layouts/partials/body-top.html
+++ b/themes/osprey/layouts/partials/body-top.html
@@ -7,26 +7,21 @@
 
 {{ if .IsHome }}
   <header class="row middle-xs center-xs">
-    <div class="col-xs-10">
-      <div class="row middle-xs start-xs">
-        <div class="col-xs-6">
+    <div class="col-xs-12" style="padding-bottom: 15%;">
           <h1>affected</h1>
           <strong>{{ .Site.Params.tagline }}</strong>
           <br><br>
           <!-- <img src="{{ .Site.Params.logoBig}}" alt="{{ .Site.Title }}"> -->
-          <a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
-          <a href="https://affected.eventbrite.com.au" class="button">RSVP to the launch</a>
-        </div>
-      </div>
-      <div class="row middle-xs end-xs">
-        <div class="col-xs-8">
-
-
-          <p><em>{{ .Site.Params.queryline }}</em></p>
-          <img class="signature-img" src="/images/sig.png"/>
-
-
-        </div>
+          <a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">BUY THE BOOK</a>
+          <a href="https://affected.eventbrite.com.au" class="button">RSVP LAUNCH</a>
+    </div>
+    <video autoplay loop id="video-background" muted plays-inline>
+      <source src="/videos/affected.mp4" type="video/mp4">
+    </video>
+    <div class="queryline row middle-xs end-xs">
+      <div class="col-xs-10">
+        <p><em>{{ .Site.Params.queryline }}</em></p>
+        <img class="signature-img" src="/images/sig.png"/>
       </div>
     </div>
   </header>
@@ -44,7 +39,7 @@
       </div>
     {{ end }}
     <div class="col-xs-2 col-sm-2 buy-button">
-      <a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a>
+      <a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">BUY THE BOOK</a>
     </div>
 
   <div class="col-xs-4 col-sm-1 nav-toggle">
@@ -58,7 +53,7 @@
       {{ range .Site.Menus.main }}
         <div class="col-xs-12"><h1><a data-scroll href="{{ .URL }}">{{ .Name }}</a></h1></div>
       {{ end }}
-      <div class="col-xs-12"><h1><a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">buy the book</a></h1></div>
+      <div class="col-xs-12"><h1><a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">BUY THE BOOK</a></h1></div>
     </div>
   </div>
 </section>
