--- a/themes/osprey/layouts/partials/body-top.html
+++ b/themes/osprey/layouts/partials/body-top.html
@@ -16,6 +16,7 @@
           <a href="https://affected.eventbrite.com.au" class="button">RSVP LAUNCH</a>
     </div>
     <video autoplay loop id="video-background" muted plays-inline>
+      <source src="/videos/affected.webm" type="video/webm">
       <source src="/videos/affected.mp4" type="video/mp4">
     </video>
     <div class="queryline row middle-xs end-xs">
