--- a/themes/osprey/static/styles/main.css
+++ b/themes/osprey/static/styles/main.css
@@ -1535,34 +1535,34 @@ ul li {
     color: #212121; } }
 header {
   position: relative; }
-  header h1 {
-    color: #FFFFFF;
-    font-size: 8rem;
-    line-height: 6rem;
-    letter-spacing: 0px;
-    margin: 0; }
-  header strong {
-    color: #FFFFFF;
-    position: relative;
-    margin-left: 10px; }
-  header p em, header p q {
-    color: #FFFFFF; }
-  header .button {
-    display: inline-block;
-    width: 200px;
-    padding: 8px;
-    margin: 0 0.75em;
-    background-color: #b3b2b2;
-    color: #FFFFFF;
-    border-radius: 25px;
-    text-align: center;
-    -webkit-transition: color 0.3s ease-in-out;
-            transition: color 0.3s ease-in-out; }
-    header .button:hover {
-      color: #D41016; }
+  header .title {
+    padding-top: 20vh; }
+    header .title h1 {
+      color: #FFFFFF;
+      font-size: 6em;
+      line-height: 0.75em;
+      letter-spacing: 0px;
+      margin: 0; }
+    header .title strong {
+      color: #FFFFFF;
+      position: relative;
+      margin-left: 10px; }
+    header .title .button {
+      display: inline-block;
+      width: 200px;
+      padding: 8px;
+      margin: 0.5em 0.75em;
+      background-color: #b3b2b2;
+      color: #FFFFFF;
+      border-radius: 25px;
+      text-align: center;
+      -webkit-transition: color 0.3s ease-in-out;
+              transition: color 0.3s ease-in-out; }
+      header .title .button:hover {
+        color: #D41016; }
   header .queryline {
     width: 100%;
-    background-color: rgba(50, 50, 50, 0.7);
+    background-color: #65686b;
     position: absolute;
     bottom: 64px;
     letter-spacing: 1px; }
@@ -1570,17 +1570,59 @@ header {
       margin: 1em 0 0;
       padding: 1em;
       padding-right: 3em; }
+      header .queryline p em, header .queryline p q {
+        color: #FFFFFF; }
     header .queryline .signature-img {
       display: inline-block;
       max-height: 3em;
       margin-bottom: 1em;
       padding-right: 3em; }
-  header #video-background {
+  header .video-container {
     position: absolute;
-    left: -25%;
-    top: -100%;
-    min-height: 100%;
-    min-width: 100%; }
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 10; }
+    header .video-container #video-background {
+      min-height: 100%;
+      width: 100%; }
+  @media (max-width: 60em) {
+    header .title {
+      padding-top: 20vh; }
+    header h1 {
+      font-size: 4em;
+      line-height: 2em; }
+    header .queryline {
+      bottom: 0; }
+      header .queryline p {
+        font-size: 1em; }
+      header .queryline .signature-img {
+        max-height: 2em;
+        margin-bottom: 0.5em;
+        padding-right: 0; } }
+  @media (max-width: 30em) {
+    header .title {
+      top: -5vh; }
+      header .title h1 {
+        font-size: 4em;
+        line-height: 0.75em; }
+    header .queryline {
+      bottom: 0; }
+      header .queryline p {
+        font-size: 1em;
+        padding: 1em;
+        margin: 0; }
+      header .queryline .signature-img {
+        max-height: 2em;
+        margin-bottom: 0.5em;
+        padding-right: 0; }
+    header .video-container #video-background {
+      height: 100%;
+      width: auto; } }
 
 nav {
   height: 4rem;
@@ -1597,7 +1639,8 @@ nav {
     margin: 0;
     font-family: #b3b2b2;
     letter-spacing: 2px;
-    font-weight: 600; }
+    font-weight: 600;
+    font-size: 1em; }
   nav img {
     display: inline-block;
     max-width: 10em;
@@ -1611,7 +1654,11 @@ nav {
     left: 2em; }
   nav .nav-toggle {
     position: absolute;
-    right: 6em; }
+    right: 2em; }
+    nav .nav-toggle img {
+      -webkit-transform: scale(0.8);
+          -ms-transform: scale(0.8);
+              transform: scale(0.8); }
   nav .buy-button {
     position: absolute;
     right: 2em; }
@@ -1630,6 +1677,11 @@ nav {
   nav .nav-toggle a {
     display: none; }
 
+@media (max-width: 1024px) {
+  nav {
+    padding-left: 5em; }
+    nav h3 {
+      font-size: 0.75em; } }
 .nav-fixed {
   position: fixed;
   top: 0;
@@ -1755,6 +1807,10 @@ main h1 {
     max-width: 80%;
     position: relative;
     top: -4em; }
+  @media (max-width: 60em) {
+    .about img {
+      max-width: 60%;
+      top: 0; } }
   .about .icon-link {
     width: 40px;
     height: 40px;
@@ -1807,11 +1863,11 @@ main h1 {
     padding: 0;
     position: relative; }
   .gallery .gallery-container {
-    margin: 0 2em; }
+    margin: 0 1em; }
 
 .title {
   position: absolute;
-  top: 0;
+  top: 1em;
   bottom: 0;
   left: 0;
   right: 0;
@@ -1904,6 +1960,11 @@ main h1 {
     #foxes .slider-container button.next {
       right: 1em; }
 
+@media (max-width: 48em) {
+  #foxes .slider-container .siema {
+    margin: 1em 0; }
+    #foxes .slider-container .siema .inner-container {
+      padding: 2em 2.5em 0; } }
 #instafeed {
   max-width: 1080px;
   width: 100%;
