--- a/themes/osprey/static/styles/scss/main.scss
+++ b/themes/osprey/static/styles/scss/main.scss
@@ -76,6 +76,8 @@ padding-top: 20vh;
     width: 100%;
     background-color: #65686b;
     position: absolute;
+    left: 0;
+    right: 0;
     bottom: 64px;
     letter-spacing: 1px;
     p {
