--- a/themes/osprey/static/styles/scss/main.scss
+++ b/themes/osprey/static/styles/scss/main.scss
@@ -530,7 +530,9 @@ main h1 {
     .siema {
       margin: 1em 0;
       .inner-container{
+        margin: 0 auto;
         padding: 2em 6em 0;
+        max-width: 80rem;
         p, strong, em {
                   color: #FFF;
         }
