--- a/themes/osprey/layouts/partials/about.html
+++ b/themes/osprey/layouts/partials/about.html
@@ -23,6 +23,12 @@
         </div>
       </div>
       {{ end }}
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+          <video controls plays-inline width="100%">
+            <source src="/videos/affected-launch.webm" type="video/webm">
+        </div>
+      </div>
     </div>
   </section>
 {{ end }}
