--- a/themes/osprey/layouts/partials/about.html
+++ b/themes/osprey/layouts/partials/about.html
@@ -27,6 +27,7 @@
         <div class="col-xs-12 col-md-10 col-md-offset-1">
           <video controls plays-inline width="100%">
             <source src="/videos/affected-launch.webm" type="video/webm">
+            <source src="/videos/affected-launch.mp4" type="video/mp4">
         </div>
       </div>
     </div>
