Buy book link update

--- a/themes/osprey/layouts/partials/body-top.html
+++ b/themes/osprey/layouts/partials/body-top.html
@@ -12,8 +12,8 @@
           <strong>{{ .Site.Params.tagline }}</strong>
           <br><br>
           <!-- <img src="{{ .Site.Params.logoBig}}" alt="{{ .Site.Title }}"> -->
-          <a href="https://www.wiley.com/en-au/Affected%3A+Emotionally+Engaging+Customers+in+The+Digital+Age-p-9780730357018 " class="button">BUY THE BOOK</a>
-          <a href="https://affected.eventbrite.com.au" class="button">RSVP LAUNCH</a>
+          <a href="https://affectedthebook.squarespace.com/" class="button">BUY THE BOOK</a>
+          <!-- <a href="https://affected.eventbrite.com.au" class="button">RSVP LAUNCH</a> -->
     </div>
     <div class="queryline row end-xs">
       <div class="col-xs-12 col-sm-10">
